# Quicstar

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.compose  LICENSE  README.de.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: quicstar.example.toml
src/quicstar/: __init__.py  cli.py  config.py  i18n.py  server.py
src/quicstar/locales/de/LC_MESSAGES/: quicstar.mo  quicstar.po
src/quicstar/locales/es/LC_MESSAGES/: quicstar.mo  quicstar.po
src/quicstar/locales/fr/LC_MESSAGES/: quicstar.mo  quicstar.po
src/quicstar/locales/ja/LC_MESSAGES/: quicstar.mo  quicstar.po
src/quicstar/locales/zh/LC_MESSAGES/: quicstar.mo  quicstar.po
