[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicstar"
version = "1.0.2"
description = "Lightweight, modern Python web server with HTTP/3 and flexible deployment"
authors = [{name = "Thomas Winkelmann"}]
readme = "README.md"
license = { text = "LicenseRef-Quicstar-NSSL" }
requires-python = ">=3.10"
dependencies = [
  "hypercorn[h3]>=0.16.0",
  "tomli>=2.0.1; python_version < '3.11'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Profile = "https://git.diath.systems/DiamantTh"

[project.scripts]
quicstar = "quicstar.cli:main"
quicstar-server = "quicstar.cli:main"

[tool.hatch.build]
packages = ["src/quicstar"]
include = [
  "README.md",
  "LICENSE",
  "examples",
]
